--- a/setup.cfg
+++ b/setup.cfg
@@ -136,6 +136,7 @@ scancodeio_pipelines =
     scan_codebase = scanpipe.pipelines.scan_codebase:ScanCodebase
     scan_codebase_packages = scanpipe.pipelines.scan_codebase_packages:ScanCodebasePackages
     scan_package = scanpipe.pipelines.scan_package:ScanPackage
+    matching = scanpipe.pipelines.matching:Matching
 
 [isort]
 force_single_line = True
